添加调试信息，解决偏移量计算错误的问题